--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/menocomp/functional-programming#readme",
   "devDependencies": {
-    "ts-node": "^9.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
